Removed pattern-matching to disable preview features